--- a/slides/01_intro_and_principles_of_repro.html
+++ b/slides/01_intro_and_principles_of_repro.html
@@ -65,14 +65,14 @@ class: center, middle, inverse, title-slide
 
 This programme comprises several modules lasting from 30 minutes to 2 hours. The selection of modules you undertake will depend on your previous experience.
 
-[1. Introduction and Principles of reproducibility](slides/01_intro_and_principles_of_repro.html)  
+[1. Introduction and Principles of reproducibility](01_intro_and_principles_of_repro.html)  
 Expected audience: Everyone
 * Rationale for scripting  
 * Why R?  
 * Organisation of data  
 * Organisation of analyses  
 
-[2. Introduction to R and working with data](slides/02_intro_to_r_and_working_with_data.html)  
+[2. Introduction to R and working with data](02_intro_to_r_and_working_with_data.html)  
 Expected audience: Those without previous experience
 * Finding your way round RStudio  
 * Typing in data, doing some calculations on it, plotting it  
@@ -82,26 +82,26 @@ Expected audience: Those without previous experience
 * Installing and loading packages  
 ---
 # Programme overview - continued
-[3. RStudio Projects](slides/03_rstudio_projects.html)  
+[3. RStudio Projects](03_rstudio_projects.html)  
 Expected audience: Everyone
 * Organising your work in a logical, consistent and reproducible way using RStudio Projects  
 * Writing code with relative paths given appropriate to your project organisation  
 * Writing dataframes and figures to file  
 
-[4. Tidying data and the tidyverse including the pipe](slides/04_tidying_data_and_the_tidyverse.html)  
+[4. Tidying data and the tidyverse including the pipe](04_tidying_data_and_the_tidyverse.html)  
 Expected audience: For those with previous experience of R but little of 'tidy data' and the tidyverse, such as having done "Introduction to R and working with data."
 * Using the tidyverse including the pipe to link operations together.  
 * Carrying out some common data tidying tasks such as reshaping, renaming and recoding variable and cleaning cell contents  
 ---
 # Programme overview - continued   
-[5. Advanced data import](slides/05_advanced_data_import.html)  
+[5. Advanced data import](05_advanced_data_import.html)  
 Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data" and "Tidying data and the tidyverse including the pipe."
 * Understanding what matters in data import  
 * Importing plain text and proprietary data formats stored locally and on the web  
 * Carrying out some simple web scraping  
 * Packages available for importing publicly accessible data from APIs  
 
-[6. R Markdown for Reproducible Reports](slides/)  
+[6. R Markdown for Reproducible Reports]()  
 Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data."
 * Making more advanced figures  
 * Creating reproducible reports in a variety of output formats.  
