module 5 mainly completed

--- a/slides/03_rstudio_projects.html
+++ b/slides/03_rstudio_projects.html
@@ -216,7 +216,7 @@ library(tidyverse)
 
 ## Import a datafile
 
-🎬 Save a copy of [pigeon.txt](../data/pigeon.txt) to your `raw_data` folder. These data give the interorbital distances for two populations of domestic pigeons.
+🎬 Save a copy of [pigeon.txt](raw_data/pigeon.txt) to your `raw_data` folder. These data give the interorbital distances for two populations of domestic pigeons.
 
 --
 
@@ -361,7 +361,7 @@ https://whattheyforgot.org/project-oriented-workflow.html&gt;. Accessed:
 
 class: inverse
 
-# 🎉 Congratulations! Keep practising! 🎈 
+# 🥳 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
