import complete bar summary and extra exercises

--- a/slides/02_intro_to_r_and_working_with_data.html
+++ b/slides/02_intro_to_r_and_working_with_data.html
@@ -1222,7 +1222,7 @@ pigeon2 %&gt;%
 ```
 
 .footnote[
-&lt;span style=" font-weight: bold;    color: #fdf9f6 !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #25496b !important;" &gt;Extra exercise:&lt;/span&gt;  Add a column for the standard devation
+&lt;span style=" font-weight: bold;    color: #fdf9f6 !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #25496b !important;" &gt;Extra exercise:&lt;/span&gt;  Add a column for the standard deviation
 
 &lt;span style=" font-weight: bold;    color: #fdf9f6 !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #25496b !important;" &gt;Extra exercise:&lt;/span&gt;  Add a column for the standard error given by `\(\frac{s.d.}{\sqrt{n}}\)`
 
@@ -1468,7 +1468,7 @@ _JOSS_ 4.43, p. 1686.
 
 class: inverse
 
-# 🥳 Congratulations! Keep practising! 🎈 
+# 🎉 Congratulations! Keep practising! 🎉 
 
 ---
 # Introduction to Reproducibility in R
